Fix test linker flags.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -247,8 +247,10 @@ IF(CHROME_FOUND)
       TESTS ${TEST_FILES}
       RUNNER ${BERKELIUM_TOP_LEVEL}/test/Test.cpp
       DEPENDS berkelium libberkelium)
-    
-    TARGET_LINK_LIBRARIES(${TEST_BINARY} -llibberkelium)
+
+    TARGET_LINK_LIBRARIES(${TEST_BINARY} ${BERKELIUM_LINK_LIBS})
+    SET_TARGET_PROPERTIES(${TEST_BINARY} PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS} -Wl,-rpath,${CMAKE_CURRENT_BINARY_DIR}")
+    SET_TARGET_PROPERTIES(${TEST_BINARY} PROPERTIES SKIP_BUILD_RPATH ON)
     ADD_DEPENDENCIES(${TEST_BINARY} berkelium libberkelium)
 
     ADD_CUSTOM_TARGET(test
