Add binary directory rpath setting for ppmrender so you don't need to use LD_LIBRARY_PATH on Linux when running in-tree.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,7 +146,7 @@ IF(CHROME_FOUND)
   IF(BERKELIUM_BUILD_DEMOS)
     ADD_EXECUTABLE(ppmrender ${BERKELIUM_TOP_LEVEL}/demo/ppmrender/ppmmain.cpp)
     TARGET_LINK_LIBRARIES(ppmrender ${BERKELIUM_LINK_LIBS})
-    SET_TARGET_PROPERTIES(ppmrender PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS}")
+    SET_TARGET_PROPERTIES(ppmrender PROPERTIES LINK_FLAGS "${BERKELIUM_LDFLAGS} -Wl,-rpath,${CMAKE_CURRENT_BINARY_DIR}")
     SET_TARGET_PROPERTIES(ppmrender PROPERTIES SKIP_BUILD_RPATH ON)
     ADD_DEPENDENCIES(ppmrender libberkelium)
     IF(APPLE)
