Disable incremental linking. Hardwire chromium .RC files, always using files from Release (my IDE does not seem to be able to load files with '$(ConfigurationName)' in their path at compile time.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ chrome_debug.log
 chrome.log
 First Run
 /win32/resources
+/win32/subprocess/Bin/subprocess.obj
 installed-chromium
 
 # generated documentation
