--- a/win32/berkelium.vcproj
+++ b/win32/berkelium.vcproj
@@ -67,7 +67,7 @@
 				AdditionalOptions="/DELAYLOAD:&quot;dbghelp.dll&quot; /DELAYLOAD:&quot;dwmapi.dll&quot; /DELAYLOAD:&quot;uxtheme.dll&quot; /DELAYLOAD:&quot;avcodec-52.dll&quot; /DELAYLOAD:&quot;avformat-52.dll&quot; /DELAYLOAD:&quot;avutil-50.dll&quot; /DELAYLOAD:&quot;crypt32.dll&quot; /DELAYLOAD:&quot;cryptui.dll&quot; /DELAYLOAD:&quot;winhttp.dll&quot; /DELAYLOAD:&quot;wininet.dll&quot; /DELAYLOAD:&quot;wsock32.dll&quot; /DELAYLOAD:&quot;ws2_32.dll&quot; /DELAYLOAD:&quot;winspool.drv&quot; /DELAYLOAD:&quot;comdlg32.dll&quot; /DELAYLOAD:&quot;imagehlp.dll&quot; /DELAYLOAD:&quot;urlmon.dll&quot; /DELAYLOAD:&quot;imm32.dll&quot; /DELAYLOAD:&quot;iphlpapi.dll&quot; /DELAYLOAD:&quot;setupapi.dll&quot;"
 				AdditionalDependencies="wininet.lib version.lib msimg32.lib ws2_32.lib dnsapi.lib usp10.lib psapi.lib dbghelp.lib sandbox.lib locationapi.lib avcodec-52.lib avformat-52.lib avutil-50.lib ..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\allocator\libcmt.lib differ_block_sse2.lib differ_block.lib chromoting_host.lib chromoting_base.lib trace_proto_lib.lib chromotocol_proto_lib.lib platform_qual_lib.lib ldrhandle.lib browserhandle.lib handle_lookup.lib service_runtime_x86_32.lib ncopcode_utils.lib ncvalidate.lib service_runtime_x86_common.lib gio_wrapped_desc.lib nacl_base.lib imc.lib nrd_xfer.lib gdb_rsp.lib debug_stub.lib nonnacl_srpc.lib platform.lib gio.lib env_cleanser.lib sel.lib nacl.lib glue.lib webkit_user_agent.lib app_base.lib webkit_gpu.lib plugin.lib command_buffer_service.lib libglesv2.lib libegl.lib allocator.lib rlz_lib.lib isimpledom.lib iaccessible2.lib quota.lib database.lib hunspell.lib ui_base.lib translator_glsl.lib webcore_svg.lib webcore_rendering.lib i18n_api.lib webcore_remaining.lib webcore_platform.lib translator_common.lib ots.lib libwebp.lib libxslt.lib iccjpeg.lib wtf.lib yarr.lib webcore_bindings.lib webcore_html.lib webkit.lib speex.lib flac.lib ppapi_proxy.lib content_browser.lib cacheinvalidation.lib sync_notifier.lib sync.lib bspatch.lib lzma_sdk.lib courgette_lib.lib installer_util.lib gtest.lib http_server.lib debugger.lib ppapi_cpp_objects.lib chromoting_protocol.lib chromoting_client.lib libsrtp.lib notifier.lib chromoting_jingle_glue.lib yuv_convert_sse2.lib cpu_features.lib yuv_convert.lib media.lib chromoting_plugin.lib libjingle_p2p.lib expat.lib libjingle.lib ppapi_shared_impl.lib blob.lib appcache.lib libbzip2.lib fileapi.lib ipc.lib content_common.lib libxml2.lib default_plugin.lib gles2_cmd_helper.lib gles2_implementation.lib gles2_c_lib.lib command_buffer_common.lib command_buffer_client.lib gpu_ipc.lib ssl.lib v8_base.lib v8_snapshot.lib net_base.lib sdch.lib googleurl.lib net.lib libjpeg.lib zlib.lib libpng.lib skia_opts.lib skia.lib gfx.lib base_i18n.lib common_net.lib icuuc.lib icui18n.lib sqlite3.lib nspr.lib nss.lib dynamic_annotations.lib modp_b64.lib base.lib common_constants.lib protobuf_lite.lib views.lib cld.lib policy.lib printing.lib service.lib worker.lib utility.lib syncapi.lib renderer.lib profile_import.lib ppapi_plugin.lib chrome_gpu.lib browser.lib common.lib DelayImp.lib"
 				OutputFile="..\bin\berkelium_d.dll"
-				LinkIncremental="2"
+				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;..\..\chromium\chromium\src\chrome\Debug\lib&quot;;..\..\chromium\chromium\src\third_party\platformsdk_win2008_6_1\files\lib"
 				IgnoreDefaultLibraryNames="libcmtd.lib;libcmt.lib"
 				DelayLoadDLLs="dbghelp.dll;dwmapi.dll;avcodec-52.dll;avformat-52.dll;avutil-50.dll;crypt32.dll;cryptui.dll;winhttp.dll;wininet.dll;ws2_32.dll;winspool.drv;comdlg32.dll;urlmon.dll;imm32.dll;iphlpapi.dll;prntvpt.dll"
@@ -302,7 +302,7 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
-				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\app\app_resources\app_resources.rc"
+				RelativePath="..\..\chromium\chromium\src\chrome\Release\obj\global_intermediate\app\app_resources\app_resources.rc"
 				>
 			</File>
 			<File
@@ -310,7 +310,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome\browser_resources.rc"
+				RelativePath="..\..\chromium\chromium\src\chrome\Release\obj\global_intermediate\chrome\browser_resources.rc"
 				>
 			</File>
 			<File
@@ -318,15 +318,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome\common_resources.rc"
+				RelativePath="..\..\chromium\chromium\src\chrome\Release\obj\global_intermediate\chrome\common_resources.rc"
 				>
 			</File>
 			<File
-				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\net\net_resources.rc"
+				RelativePath="..\..\chromium\chromium\src\chrome\Release\obj\global_intermediate\net\net_resources.rc"
 				>
 			</File>
 			<File
-				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome\renderer_resources.rc"
+				RelativePath="..\..\chromium\chromium\src\chrome\Release\obj\global_intermediate\chrome\renderer_resources.rc"
 				>
 			</File>
 			<File
@@ -334,15 +334,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\chrome\theme_resources.rc"
+				RelativePath="..\..\chromium\chromium\src\chrome\Release\obj\global_intermediate\chrome\theme_resources.rc"
 				>
 			</File>
 			<File
-				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\webkit\webkit_chromium_resources.rc"
+				RelativePath="..\..\chromium\chromium\src\chrome\Release\obj\global_intermediate\webkit\webkit_chromium_resources.rc"
 				>
 			</File>
 			<File
-				RelativePath="..\..\chromium\chromium\src\chrome\$(ConfigurationName)\obj\global_intermediate\webkit\webkit_resources.rc"
+				RelativePath="..\..\chromium\chromium\src\chrome\Release\obj\global_intermediate\webkit\webkit_resources.rc"
 				>
 			</File>
 		</Filter>
